se agrego modificaciones

--- a/index.html
+++ b/index.html
@@ -3,13 +3,105 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
-<h1> nuevo</h1>
 
 <body>
+    <header>
+        <nav>
+            <a href="/WebStudio">WebStudio</a>
+            <ul>
+                <li> <a href="/Estudio">Estudio</a> </li>
+                <li> <a href="/Portafolio">Portafolio</a> </li>
+                <li> <a href="/Contacto">Contacto</a> </li>
+            </ul>
+        </nav>
+        <ul>
+            <li> <a href="mailto:info@devstudio.com"> info@devstudio.com</a> </li>
+            <li> <a href="tel:+525555296000"> +52 55 5529 6000 </a> </li>
+        </ul>
+    </header>
+    <main>
+        <section>
+            <h3>SOLUCIONES EFICACES PARA SU NEGOCIO </h3>
+            <button type="button">Solicite nuestro servicio </button>
+        </section>
 
+        <section>
+            <ul>
+                <li>
+                    <h3> ATENCIÓN A LOS DETALLES </h3>
+                    <p> Nos adentramos en todos los detalles y procesos de su negocio, para
+                        así desarrollar una solución a su medida. </p>
+                </li>
+
+                <li>
+                    <h3> PUNTUALIDAD </h3>
+                    <p> Con nosotros, usted puede sentirse seguro y protegido. Un principio
+                        importante
+                        de la empresa: respetar su tiempo y respetar los plazos acordados. </p>
+                </li>
+
+                <li>
+                    <h3> PLANIFICACIÓN </h3>
+                    <p> Usted podrá observar y participar en cada fase del desarrollo y
+                        aplicación de soluciones. </p>
+
+                </li>
+                <li>
+                    <h3> TEGNOLOGÍA MODERNA </h3>
+                    <p> Usamos herramientas innovadoras para resolver las tareas asignadas.
+                        Es hora de simplificar los procesos laborales. </p>
+
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2> A qué nos dedicamos </h2>
+            <ul>
+                <li> <img src="./images/a_que_nos_dedicamos_1.jpg" alt="imagen de persona programando" width="374"
+                        height="300"> </li>
+                <li><img src="./images/a_que_nos_dedicamos_2.jpg" alt="imagen de persona controlando" width="374"
+                        height="300"></li>
+                <li><img src="./images/a_que_nos_dedicamos_3.jpg" alt="imagen de persona diseñando" width="374"
+                        height="300"> </li>
+            </ul>
+        </section>
+        <section>
+            <h2> Nuestro Equipo </h2>
+            <ul>
+                <li><img src="./images/andres_cubo.jpg" alt="Diseñador de Productos" width="270" height="260">
+                    <h3> Andrés Cubo </h3>
+                    <p> Diseñador de Productos </p>
+                </li>
+                <li><img src="./images/carla_palacios.jpg" alt="Desarrolladora Frontend" width="270" height="260">
+                    <h3>Carla Palacios </h3>
+                    <p> Desarrolladora Frontend </p>
+                </li>
+                <li><img src="./images/mario_dorado.jpg" alt="Marketing" width="270" height="260">
+                    <h3> Mario Dorado </h3>
+                    <p> Marketing </p>
+                </li>
+                <li><img src="./images/pablo_mijangos.jpg" alt="Diseñador IU " width="270" height="260">
+                    <h3> Pablo Mijangos </h3>
+                    <p>Diseñador IU </p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <address>
+            <a href="/WebStudio">WebStudio</a>
+            <p> Calz. Ticomán 500, Ciudad de </p>
+            <p> México, CDMX, México</p>
+            <ul>
+                <li> <a href="mailto:info@devstudio.com"> info@devstudio.com</a> </li>
+                <li> <a href="tel:+525555296000"> +52 55 5529 6000 </a> </li>
+            </ul>
+        </address>
+    </footer>
 </body>
 
 </html>
