se realizo cambios

--- a/portafolio.html
+++ b/portafolio.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tarea 2</title>
-    <link rel="stylesheet" href="css./style/css" />
+    <link rel="stylesheet" href="./css/style.css" />
+
 </head>
 
 <body>
 
     <header>
         <nav>
-            <a href="/WebStudio" class="encabezado" href="/WebStudio"> WebStudio </a>
+            <a href="#" class="header-home link current"> WebStudio </a>
             <ul>
-                <li> <a class="" href="/Estudio">Estudio</a> </li>
-                <li> <a class="" href="/Portafolio">Portafolio</a> </li>
-                <li> <a class="" href="/Contacto">Contacto</a> </li>
+                <li> <a class="link" href="./index.html" class="header-home link current">Estudio</a> </li>
+                <li> <a class="link" href="#">Portafolio</a> </li>
+                <li> <a class="link" href="#">Contacto</a> </li>
             </ul>
         </nav>
 
@@ -25,11 +26,11 @@
             <li> <a class="Contacto_link" href="tel:+525555296000">+52 55 5529 6000</a> </li>
         </ul>
         <ul>
-            <li> <a class="" href="/Todo"> Todo </li>
-            <li> <a class="" href="/Sitios-web"> Sitio-web</li>
-            <li><a class="" href="/Aplicaciones"> Aplicaciones</li>
-            <li> <a class="" href="/Diseño"> Diseño</li>
-            <li> <a class="" href="/Marketing"> Marketing </li>
+            <li> <a class="button" href="/Todo"> Todo </li>
+            <li> <a class="button" href="/Sitios-web"> Sitio-web</li>
+            <li><a class="button" href="/Aplicaciones"> Aplicaciones</li>
+            <li> <a class="button" href="/Diseño"> Diseño</li>
+            <li> <a class="button" href="/Marketing"> Marketing </li>
         </ul>
         <main>
             <section>
@@ -38,7 +39,7 @@
                         <h3> Tecnoduck </h3>
                         <p> Sitio-web </p>
                     </li>
-                    <li> <img src="./images/Póster_de_Nueva_Orleans_vs_Estrella_Dorada_5.jpg" alt="Diseño" width="370"
+                    <li> <img src="./images/Póster_de_Nueva Orleans_vs_Estrella Dorada.jpg" alt="Diseño" width="370"
                             height="294" />
                         <h3>Póster de Nueva Orleans vs Estrella Dorada </h3>
                         <p>Diseño</p>
@@ -53,7 +54,7 @@
                     </li>
                     <li><img src="./images/Proyecto_Cajas.jpg" alt="Aplicaciones" width="370" height="294" />
                         <h3>Proyecto Cajas</h3>
-                        Aplicaciones <p> </p>
+                        <p>Aplicaciones </p>
                     </li>
                     <li><img src="images/La_inspiración_no_tiene_límites.jpg" alt="Sitio-web" width="370"
                             height="294" />
