--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
+
+
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href="/WebStudio">WebStudio</a>
-            <ul>
-                <li> <a href="/Estudio">Estudio</a> </li>
-                <li> <a href="/Portafolio">Portafolio</a> </li>
-                <li> <a href="/Contacto">Contacto</a> </li>
+        <nav class="header-navigation">
+            <a href="./index.html" class="header-home link current">
+                <span class="logo-blue"> WebStudio</span> </a>
+
+            <ul class="header-menu-list">
+                <li> <a href="#">Estudio</a> </li>
+                <li> <a href="./portafolio.html" class="header-home link current"> portafolio</a> </li>
+                <li> <a href="#">Contacto</a> </li>
             </ul>
         </nav>
         <ul>
@@ -96,9 +101,10 @@
                     <h3> Tecnoduck </h3>
                     <p> Sitio-web </p>
                 </li>
-                <li><img src="images/Póster_de_Nueva Orleans_vs_Estrella Dorada_5.jpg" alt="imagen de competencia"
-                        width="370" height="294">
+                <li><img src="./images/Póster_de_Nueva Orleans_vs_Estrella Dorada.jpg" alt="Diseño" width="370"
+                        height="294">
                     <h3>Póster de Nueva Orleans vs Estrella Dorada </h3>
+                    <p>Diseño</p>
                 </li>
                 <li><img src="images/Restaurante_Seafood.jpg" alt="Aplicaciones" width="370" height="294">
                     <h3>Restaurante Seafood </h3>
