se crea ruta css

--- a/portafolio.html
+++ b/portafolio.html
@@ -11,30 +11,36 @@
 
 <body>
 
-    <header>
-        <nav>
-            <a href="#" class="header-home link current"> WebStudio </a>
+    <header class="header">
+        <nav class="header-navigation">
+            <a href="./portafolio.html" class="header-home link current">
+                <span class="logo-blue"> WebStudio</span>
+            </a>
             <ul>
-                <li> <a class="link" href="./index.html" class="header-home link current">Estudio</a> </li>
-                <li> <a class="link" href="#">Portafolio</a> </li>
-                <li> <a class="link" href="#">Contacto</a> </li>
+                <li> <a class="header-home" href="./index.html" class="header-home link current">Estudio</a> </li>
+                <li> <a class="header-home" href="./portafolio.html" class="header-home link current">Portafolio</a>
+                </li>
+                <li> <a class="header-home" href="#">Contacto</a> </li>
             </ul>
         </nav>
 
-        <ul>
-            <li><a class="Contacto_link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-            <li> <a class="Contacto_link" href="tel:+525555296000">+52 55 5529 6000</a> </li>
+        <ul class="header-contacts list">
+            <li class="header-email"><a class="email_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="header-tel"> <a class="tel_link" href="tel:+525555296000">+52 55 5529 6000</a>
+            </li>
         </ul>
-        <ul>
-            <li> <a class="button" href="/Todo"> Todo </li>
-            <li> <a class="button" href="/Sitios-web"> Sitio-web</li>
-            <li><a class="button" href="/Aplicaciones"> Aplicaciones</li>
-            <li> <a class="button" href="/Diseño"> Diseño</li>
-            <li> <a class="button" href="/Marketing"> Marketing </li>
+
+        <ul class="header-button">
+            <li class="type"> <a class="button" href="/Todo"> Todo </li>
+            <li class="type"> <a class="button" href="/Sitios-web"> Sitio-web</li>
+            <li class="type"> <a class="button" href="/Aplicaciones"> Aplicaciones</li>
+            <li class="type"> <a class="button" href="/Diseño"> Diseño</li>
+            <li class="type"> <a class="button" href="/Marketing"> Marketing </li>
         </ul>
         <main>
-            <section>
-                <ul>
+            <section class="team">
+                <ul class="team-list">
                     <li><img src="./images/Tecnoduck_4.jpg" alt="Sitio-web" width="370" height="294" />
                         <h3> Tecnoduck </h3>
                         <p> Sitio-web </p>
