--- a/index.html
+++ b/index.html
@@ -11,61 +11,63 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav class="header-navigation">
             <a href="./index.html" class="header-home link current">
                 <span class="logo-blue"> WebStudio</span> </a>
 
             <ul class="header-menu-list">
-                <li> <a href="#">Estudio</a> </li>
-                <li> <a href="./portafolio.html" class="header-home link current"> portafolio</a> </li>
-                <li> <a href="#">Contacto</a> </li>
+                <li class="header-home"> <a href="./index.html" class="header-home link current"> Estudio</a> </li>
+                <li class="header-home"> <a c href="./portafolio.html" class="header-home link current"> portafolio</a>
+                </li>
+                <li class="header-home"> <a href="#">Contacto</a> </li>
             </ul>
         </nav>
-        <ul>
-            <li> <a href="mailto:info@devstudio.com"> info@devstudio.com</a> </li>
-            <li> <a href="tel:+525555296000"> +52 55 5529 6000 </a> </li>
+        <ul class="header-contacts list">
+            <li class="header-email"><a class="email_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="header-tel"> <a class="tel_link" href="tel:+525555296000">+52 55 5529 6000</a>
+            </li>
         </ul>
     </header>
     <main>
-        <section>
-            <h3>SOLUCIONES EFICACES PARA SU NEGOCIO </h3>
-            <button type="button">Solicite nuestro servicio </button>
+        <section class="hero">
+            <h3 class="hero-title">SOLUCIONES EFICACES PARA SU NEGOCIO </h3>
+            <button type="button" class="hero-btn">Solicite nuestro servicio </button>
         </section>
 
-        <section>
-            <ul>
-                <li>
-                    <h3> ATENCIÓN A LOS DETALLES </h3>
-                    <p> Nos adentramos en todos los detalles y procesos de su negocio, para
+        <section class="politicas">
+            <ul class="politicas-block list">
+                <li class="politicas-list">
+                    <h3 class="politicas-title"> ATENCIÓN A LOS DETALLES </h3>
+                    <p class="politicas-text"> Nos adentramos en todos los detalles y procesos de su negocio, para
                         así desarrollar una solución a su medida. </p>
                 </li>
 
-                <li>
-                    <h3> PUNTUALIDAD </h3>
-                    <p> Con nosotros, usted puede sentirse seguro y protegido. Un principio
+                <li class="politicas-list">
+                    <h3 class="politicas-title"> PUNTUALIDAD </h3>
+                    <p class="politicas-text"> Con nosotros, usted puede sentirse seguro y protegido. Un principio
                         importante
                         de la empresa: respetar su tiempo y respetar los plazos acordados. </p>
                 </li>
 
-                <li>
-                    <h3> PLANIFICACIÓN </h3>
-                    <p> Usted podrá observar y participar en cada fase del desarrollo y
+                <li class="politicas-list">
+                    <h3 class="politicas-title"> PLANIFICACIÓN </h3>
+                    <p class="politicas-text"> Usted podrá observar y participar en cada fase del desarrollo y
                         aplicación de soluciones. </p>
 
                 </li>
-                <li>
-                    <h3> TEGNOLOGÍA MODERNA </h3>
-                    <p> Usamos herramientas innovadoras para resolver las tareas asignadas.
+                <li class="politicas-list">
+                    <h3 class="politicas-title"> TEGNOLOGÍA MODERNA </h3>
+                    <p class="politicas-text"> Usamos herramientas innovadoras para resolver las tareas asignadas.
                         Es hora de simplificar los procesos laborales. </p>
-
                 </li>
             </ul>
         </section>
 
-        <section>
+        <section class="Edición">
             <h2> A qué nos dedicamos </h2>
-            <ul>
+            <ul class="list link">
                 <li> <img src="./images/a_que_nos_dedicamos_1.jpg" alt="imagen de persona programando" width="374"
                         height="300"> </li>
                 <li><img src="./images/a_que_nos_dedicamos_2.jpg" alt="imagen de persona controlando" width="374"
@@ -76,7 +78,7 @@
         </section>
         <section>
             <h2> Nuestro Equipo </h2>
-            <ul>
+            <ul class="list link">
                 <li><img src="./images/andres_cubo.jpg" alt="Diseñador de Productos" width="270" height="260">
                     <h3> Andrés Cubo </h3>
                     <p> Diseñador de Productos </p>
