--- a/index.html
+++ b/index.html
@@ -65,35 +65,42 @@
             </ul>
         </section>
 
-        <section class="Edición">
-            <h2> A qué nos dedicamos </h2>
-            <ul class="list link">
-                <li> <img src="./images/a_que_nos_dedicamos_1.jpg" alt="imagen de persona programando" width="374"
-                        height="300"> </li>
-                <li><img src="./images/a_que_nos_dedicamos_2.jpg" alt="imagen de persona controlando" width="374"
-                        height="300"></li>
-                <li><img src="./images/a_que_nos_dedicamos_3.jpg" alt="imagen de persona diseñando" width="374"
-                        height="300"> </li>
+        <section class="diseño">
+            <h2 class="diseño-title"> A qué nos dedicamos </h2>
+            <ul class="diseño-block">
+                <li class="diseño-list"> <img src="./images/a_que_nos_dedicamos_1.jpg"
+                        alt="imagen de persona programando" width="374" height="300">
+                </li>
+                <li class="diseño-list"><img src="./images/a_que_nos_dedicamos_2.jpg"
+                        alt="imagen de persona controlando" width="374" height="300">
+                </li>
+                <li class="diseño-list"><img src="./images/a_que_nos_dedicamos_3.jpg" alt="imagen de persona diseñando"
+                        width="374" height="300">
+                </li>
             </ul>
         </section>
-        <section>
-            <h2> Nuestro Equipo </h2>
-            <ul class="list link">
-                <li><img src="./images/andres_cubo.jpg" alt="Diseñador de Productos" width="270" height="260">
+        <section class="equipo">
+            <h2 class="equipo-title"> Nuestro Equipo </h2>
+            <ul class="equipo-list list">
+                <li class="Equipo-list-item "><img src="./images/andres_cubo.jpg" alt="Diseñador de Productos"
+                        width="270" height="260">
                     <h3> Andrés Cubo </h3>
-                    <p> Diseñador de Productos </p>
+                    <p class="equipo-sub-title" lang="en"> Diseñador de Productos </p>
                 </li>
-                <li><img src="./images/carla_palacios.jpg" alt="Desarrolladora Frontend" width="270" height="260">
-                    <h3>Carla Palacios </h3>
-                    <p> Desarrolladora Frontend </p>
+                <li class="Equipo-list-item "><img src="./images/carla_palacios.jpg" alt="Desarrolladora Frontend"
+                        width="270" height="260">
+                    <h3 class="equipo-name">Carla Palacios </h3>
+                    <p class="equipo-sub-title" lang="en"> Desarrolladora Frontend </p>
                 </li>
-                <li><img src="./images/mario_dorado.jpg" alt="Marketing" width="270" height="260">
-                    <h3> Mario Dorado </h3>
-                    <p> Marketing </p>
+                <li class="Equipo-list-item "><img src="./images/mario_dorado.jpg" alt="Marketing" width="270"
+                        height="260">
+                    <h3 class="equipo-name"> Mario Dorado </h3>
+                    <p class="equipo-sub-title" lang="en"> Marketing </p>
                 </li>
-                <li><img src="./images/pablo_mijangos.jpg" alt="Diseñador IU " width="270" height="260">
-                    <h3> Pablo Mijangos </h3>
-                    <p>Diseñador IU </p>
+                <li class="Equipo-list-item "><img src="./images/pablo_mijangos.jpg" alt="Diseñador IU " width="270"
+                        height="260">
+                    <h3 class="equipo-name"> Pablo Mijangos </h3>
+                    <p class="equipo-sub-title" lang="en"> Diseñador IU </p>
                 </li>
             </ul>
         </section>
