se realizo cambios

--- a/portafolio.html
+++ b/portafolio.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tarea 2</title>
+
     <link rel="stylesheet" href="./css/style.css" />
+    <title>tarea 2</title>
 
 </head>
 
@@ -32,19 +33,24 @@
         </ul>
 
         <ul class="header-button">
-            <li class="type"> <a class="button" href="/Todo"> Todo </li>
-            <li class="type"> <a class="button" href="/Sitios-web"> Sitio-web</li>
-            <li class="type"> <a class="button" href="/Aplicaciones"> Aplicaciones</li>
-            <li class="type"> <a class="button" href="/Diseño"> Diseño</li>
-            <li class="type"> <a class="button" href="/Marketing"> Marketing </li>
+
+            <li><button type="button" class="button"> todo</button></li>
+            <li><button type="button" class="button"> Sitio-web </button></li>
+            <li><button type="button" class="button"> Aplicaciones </button></li>
+            <li><button type="button" class="button"> Diseño</button></li>
+            <li><button type="button" class="button"> Marketing </button></li>
         </ul>
         <main>
             <section class="team">
                 <ul class="team-list">
-                    <li><img src="./images/Tecnoduck_4.jpg" alt="Sitio-web" width="370" height="294" />
-                        <h3> Tecnoduck </h3>
-                        <p> Sitio-web </p>
+
+                    <li>
+                        <img src="./images/Tecnoduck_4.jpg" alt="Sitio-web" width="370" height="294" />
+
                     </li>
+                    <h3> Tecnoduck </h3>
+                    <p> Sitio-web </p>
+
                     <li> <img src="./images/Póster_de_Nueva Orleans_vs_Estrella Dorada.jpg" alt="Diseño" width="370"
                             height="294" />
                         <h3>Póster de Nueva Orleans vs Estrella Dorada </h3>
@@ -73,7 +79,7 @@
                     </li>
 
                     <li><img src="images/Proyect_LAB.jpg" alt="Marketing" width="370" height="294" />
-                        <h3> images/Proyect LAB.jpg </h3>
+                        <h3> Proyect LAB </h3>
                         <p>Marketing</p>
 
                     </li>
@@ -83,10 +89,20 @@
                     </li>
                 </ul>
             </section>
+
+
         </main>
+
+
+
+
+
+
+
+
         <footer id="Contacto">
             <address>
-                <a href="#">WebStudio</a>
+                <a href="#" class="logo-blue">WebStudio</a>
                 <p> Calz. Ticomán 500, Ciudad de </p>
                 <p> México, CDMX, México</p>
                 <ul>
