--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <title>Document</title>
+
 
 
 </head>
@@ -104,54 +105,11 @@
                 </li>
             </ul>
         </section>
-        <section>
-            <ul>
-                <li><img src="./images/Tecnoduck_4.jpg" alt="Sitio-web" width="370" height="294">
-                    <h3> Tecnoduck </h3>
-                    <p> Sitio-web </p>
-                </li>
-                <li><img src="./images/Póster_de_Nueva Orleans_vs_Estrella Dorada.jpg" alt="Diseño" width="370"
-                        height="294">
-                    <h3>Póster de Nueva Orleans vs Estrella Dorada </h3>
-                    <p>Diseño</p>
-                </li>
-                <li><img src="images/Restaurante_Seafood.jpg" alt="Aplicaciones" width="370" height="294">
-                    <h3>Restaurante Seafood </h3>
-                    <p> Aplicaciones</p>
-                </li>
-                <li><img src="images/Proyecto_Prime.jpg" alt="Marketing" width="370" height="294">
-                    <h3>Proyecto Prime </h3>
-                    <p> Marketing</p>
-                </li>
-                <li><img src="images/Proyecto_Cajas.jpg" alt="Aplicaciones" width="370" height="294">
-                    <h3>Proyecto Cajas</h3>
-                    Aplicaciones <p> </p>
-                </li>
-                <li><img src="images/La_inspiración_no_tiene_límites.jpg" alt="Sitio-web" width="370" height="294">
-                    <h3>La inspiración no tiene límites </h3>
-                    <p> Sitio-web </p>
-                </li>
-                <li><img src="images/Edición_Limitada.jpg" alt="Diseño" width="370" height="294">
-                    <h3>Edición Limitada </h3>
-                    <p>Diseño </p>
-                </li>
 
-                <li><img src="images/Proyect_LAB.jpg" alt="Marketing" width="370" height="294">
-                    <h3> images/Proyect LAB.jpg </h3>
-                    <p>Marketing</p>
-
-                </li>
-                <li><img src="images/Negocio_en_Crecimiento.jpg" alt="Aplicaciones" width="370" height="294">
-                    <h3>Negocio en Crecimiento </h3>
-                    <p>Aplicaciones </p>
-                </li>
-            </ul>
-
-        </section>
     </main>
     <footer>
         <address>
-            <a href=" /WebStudio">WebStudio</a>
+            <a href=" /WebStudio" class="logo-blue">WebStudio</a>
             <p> Calz. Ticomán 500, Ciudad de </p>
             <p> México, CDMX, México</p>
             <ul>
