--- a/portafolio.html
+++ b/portafolio.html
@@ -100,14 +100,16 @@
 
 
 
-        <footer id="Contacto">
-            <address>
+        <footer>
+            <address class="hero">
                 <a href="#" class="logo-blue">WebStudio</a>
                 <p> Calz. Ticomán 500, Ciudad de </p>
                 <p> México, CDMX, México</p>
                 <ul>
-                    <li> <a href="mailto:info@devstudio.com"> info@devstudio.com</a> </li>
-                    <li> <a href="tel:+525555296000"> +52 55 5529 6000 </a> </li>
+                    <li class=""><a class="header-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class=""> <a class="header-tel" href="tel:+525555296000">+52 55 5529 6000</a>
+                    </li>
                 </ul>
             </address>
         </footer>
