--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
                 <span class="logo-blue"> WebStudio</span> </a>
 
             <ul class="header-menu-list">
-                <li class="header-home"> <a href="./index.html" class="header-home link current"> Estudio</a> </li>
-                <li class="header-home"> <a c href="./portafolio.html" class="header-home link current"> portafolio</a>
+                <li class=""> <a href="./index.html" class="header-home link current"> Estudio</a> </li>
+                <li class=""> <a c href="./portafolio.html" class="header-home link current"> portafolio</a>
                 </li>
-                <li class="header-home"> <a href="#">Contacto</a> </li>
+                <li class="header-home"> <a class="header-home" href="#">Contacto</a> </li>
             </ul>
         </nav>
         <ul class="header-contacts list">
-            <li class="header-email"><a class="email_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class=""><a class="header-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="header-tel"> <a class="tel_link" href="tel:+525555296000">+52 55 5529 6000</a>
+            <li class=""> <a class="header-tel" href="tel:+525555296000">+52 55 5529 6000</a>
             </li>
         </ul>
     </header>
@@ -108,14 +108,16 @@
 
     </main>
     <footer>
-        <address>
+        <address class="hero">
             <a href=" /WebStudio" class="logo-blue">WebStudio</a>
             <p> Calz. Ticomán 500, Ciudad de </p>
             <p> México, CDMX, México</p>
             <ul>
 
-                <li> <a href="mailto:info@devstudio.com"> info@devstudio.com</a> </li>
-                <li> <a href="tel:+525555296000"> +52 55 5529 6000 </a> </li>
+                <li class=""><a class="header-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class=""> <a class="header-tel" href="tel:+525555296000">+52 55 5529 6000</a>
+                </li>
 
 
             </ul>
