--- a/portafolio.html
+++ b/portafolio.html
@@ -26,9 +26,9 @@
         </nav>
 
         <ul class="header-contacts list">
-            <li class="header-email"><a class="email_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class=""><a class="header-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="header-tel"> <a class="tel_link" href="tel:+525555296000">+52 55 5529 6000</a>
+            <li class=""> <a class="header-tel" href="tel:+525555296000">+52 55 5529 6000</a>
             </li>
         </ul>
 
