--- a/portafolio.html
+++ b/portafolio.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="./css/style.css" />
     <title>tarea 2</title>
 
@@ -18,7 +19,7 @@
             </a>
             <ul>
                 <li> <a class="header-home" href="./index.html" class="header-home link current">Estudio</a> </li>
-                <li> <a class="header-home" href="./portafolio.html" class="header-home link current">Portafolio</a>
+                <li> <a class="header-home" href="./portafolio.html">Portafolio</a>
                 </li>
                 <li> <a class="header-home" href="#">Contacto</a> </li>
             </ul>
