--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <ul class="header-menu-list">
                 <li class=""> <a href="./index.html" class="header-home link current"> Estudio</a> </li>
-                <li class=""> <a c href="./portafolio.html" class="header-home link current"> portafolio</a>
+                <li class=""> <a href="./portafolio.html" class="header-home link current"> portafolio</a>
                 </li>
                 <li class="header-home"> <a class="header-home" href="#">Contacto</a> </li>
             </ul>
