se realiza cambios

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <span class="logo-blue"> WebStudio</span> </a>
 
             <ul class="header-menu-list">
-                <li class=""> <a href="./index.html" class="header-home link current"> Estudio</a> </li>
-                <li class=""> <a href="./portafolio.html" class="header-home link current"> portafolio</a>
+                <li class="h"> <a href="./index.html" class="header-home link current"> Estudio</a> </li>
+                <li class="h"> <a href="./portafolio.html" class="header-home link current"> portafolio</a>
                 </li>
                 <li class="header-home"> <a class="header-home" href="#">Contacto</a> </li>
             </ul>
@@ -86,7 +86,7 @@
             <ul class="equipo-list list">
                 <li class="Equipo-list-item "><img src="./images/andres_cubo.jpg" alt="Diseñador de Productos"
                         width="270" height="260">
-                    <h3> Andrés Cubo </h3>
+                    <h3 class="equipo-name"> Andrés Cubo </h3>
                     <p class="equipo-sub-title" lang="en"> Diseñador de Productos </p>
                 </li>
                 <li class="Equipo-list-item "><img src="./images/carla_palacios.jpg" alt="Desarrolladora Frontend"
