--- a/portafolio.html
+++ b/portafolio.html
@@ -17,7 +17,7 @@
             <a href="./portafolio.html" class="header-home link current">
                 <span class="logo-blue"> WebStudio</span>
             </a>
-            <ul>
+            <ul class="header-conta">
                 <li> <a class="header-home" href="./index.html" class="header-home link current">Estudio</a> </li>
                 <li> <a class="header-home" href="./portafolio.html">Portafolio</a>
                 </li>
@@ -48,51 +48,51 @@
                         <img src="./images/Tecnoduck_4.jpg" alt="Sitio-web" width="370" height="294" />
 
                     </li>
-                    <h3> Tecnoduck </h3>
-                    <p> Sitio-web </p>
+                    <h3 class=" team-diseño"> Tecnoduck </h3>
+                    <p class="team-profec"> Sitio-web </p>
 
                     <li> <img src="./images/Póster_de_Nueva Orleans_vs_Estrella Dorada.jpg" alt="Diseño" width="370"
                             height="294" />
-                        <h3>Póster de Nueva Orleans vs Estrella Dorada </h3>
-                        <p>Diseño</p>
+                        <h3 class="team-diseño">Póster de Nueva Orleans vs Estrella Dorada </h3>
+                        <p class="team-profec">Diseño</p>
                     </li>
                     <li><img src="./images/Restaurante_Seafood.jpg" alt="Aplicaciones" width="370" height="294" />
-                        <h3>Restaurante Seafood </h3>
-                        <p> Aplicaciones</p>
+                        <h3 class="team-diseño">Restaurante Seafood </h3>
+                        <p class="team-profec"> Aplicaciones</p>
                     </li>
                     <li><img src="./images/Proyecto_Prime.jpg" alt="Marketing" width="370" height="294" />
-                        <h3>Proyecto Prime </h3>
-                        <p> Marketing</p>
+                        <h3 class="team-diseño">Proyecto Prime </h3>
+                        <p class="team-profec"> Marketing</p>
                     </li>
                     <li><img src="./images/Proyecto_Cajas.jpg" alt="Aplicaciones" width="370" height="294" />
-                        <h3>Proyecto Cajas</h3>
-                        <p>Aplicaciones </p>
+                        <h3 class="team-diseño">Proyecto Cajas</h3>
+                        <p class="team-profec">Aplicaciones </p>
                     </li>
                     <li><img src="images/La_inspiración_no_tiene_límites.jpg" alt="Sitio-web" width="370"
                             height="294" />
-                        <h3>La inspiración no tiene límites </h3>
-                        <p> Sitio-web </p>
+                        <h3 class="team-diseño">La inspiración no tiene límites </h3>
+                        <p class="team-profec"> Sitio-web </p>
                     </li>
                     <li><img src="./images/Edición_Limitada.jpg" alt="Diseño" width="370" height="294" />
-                        <h3>Edición Limitada </h3>
-                        <p>Diseño </p>
+                        <h3 class="team-diseño">Edición Limitada </h3>
+                        <p class="team-profec">Diseño </p>
                     </li>
 
                     <li><img src="images/Proyect_LAB.jpg" alt="Marketing" width="370" height="294" />
-                        <h3> Proyect LAB </h3>
-                        <p>Marketing</p>
+                        <h3 class="team-diseño"> Proyect LAB </h3>
+                        <p class="team-profec">Marketing</p>
 
                     </li>
                     <li><img src="./images/Negocio_en_Crecimiento.jpg" alt="Aplicaciones" width="370" height="294" />
-                        <h3>Negocio en Crecimiento </h3>
-                        <p>Aplicaciones </p>
+                        <h3 class="team-diseño">Negocio en Crecimiento </h3>
+                        <p class="team-profec">Aplicaciones </p>
                     </li>
                 </ul>
             </section>
         </main>
 
-        <footer>
-            <address class="hero">
+        <footer class="hero">
+            <address>
                 <a href="#" class="logo-blue">WebStudio</a>
                 <p> Calz. Ticomán 500, Ciudad de </p>
                 <p> México, CDMX, México</p>
