se modific index & porfolio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
@@ -19,7 +19,7 @@
                 <span class="logo-blue"> WebStudio</span> </a>
 
             <ul class="header-menu-list">
-                <li class="h"> <a href="./index.html" class="header-home link current"> Estudio</a> </li>
+                <li class="hes"> <a href="./index.html" class="header-home link current"> Estudio</a> </li>
                 <li class="h"> <a href="./portafolio.html" class="header-home link current"> portafolio</a>
                 </li>
                 <li class="header-home"> <a class="header-home" href="#">Contacto</a> </li>
@@ -108,8 +108,8 @@
         </section>
 
     </main>
-    <footer>
-        <address class="hero">
+    <footer class="hero-triton">
+        <address>
             <a href=" /WebStudio" class="logo-blue">WebStudio</a>
             <p> Calz. Ticomán 500, Ciudad de </p>
             <p> México, CDMX, México</p>
