se hacen arreglos de css

--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
-
-
-
 </head>
 
 <body>
@@ -19,10 +15,16 @@
                 <span class="logo-blue"> WebStudio</span> </a>
 
             <ul class="header-menu-list">
-                <li class="hes"> <a href="./index.html" class="header-home link current"> Estudio</a> </li>
-                <li class="h"> <a href="./portafolio.html" class="header-home link current"> portafolio</a>
+                <li class="header-menu-item 1">
+                    <a href="./index.html" class="link1" class="header-link link current"> Estudio</a>
                 </li>
-                <li class="header-home"> <a class="header-home" href="#">Contacto</a> </li>
+
+                <li class="header-menu-item 2">
+                    <a href="./portafolio.html" class="link2" class="header-link link">portafolio</a>
+                </li>
+                <li class="header-menu-item 3">
+                    <a href="#" class="link3" class="header-link link">Contacto</a>
+                </li>
             </ul>
         </nav>
         <ul class="header-contacts list">
@@ -38,7 +40,7 @@
             <button type="button" class="hero-btn">Solicite nuestro servicio </button>
         </section>
 
-        <section class="politicas">
+        <section class="politicas" class="diseño-block">
             <ul class="politicas-block list">
                 <li class="politicas-list">
                     <h3 class="politicas-title"> ATENCIÓN A LOS DETALLES </h3>
@@ -111,8 +113,8 @@
     <footer class="hero-triton">
         <address>
             <a href=" /WebStudio" class="logo-blue">WebStudio</a>
-            <p> Calz. Ticomán 500, Ciudad de </p>
-            <p> México, CDMX, México</p>
+            <p> Calz. Ticomán 500, Ciudad de,
+                México, CDMX, México</p>
             <ul>
 
                 <li class=""><a class="header-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
