--- a/portafolio.html
+++ b/portafolio.html
@@ -17,11 +17,17 @@
             <a href="./portafolio.html" class="header-home link current">
                 <span class="logo-blue"> WebStudio</span>
             </a>
-            <ul class="header-conta">
-                <li> <a class="header-home" href="./index.html" class="header-home link current">Estudio</a> </li>
-                <li> <a class="header-home" href="./portafolio.html">Portafolio</a>
+            <ul class="header-menu-list">
+                <li class="header-menu-item">
+                    <a href="./index.html" class="link2" class="header-link link current"> Estudio</a>
                 </li>
-                <li> <a class="header-home" href="#">Contacto</a> </li>
+
+                <li class="header-menu-item">
+                    <a href="./portafolio.html" class="link1" class="header-link link">portafolio</a>
+                </li>
+                <li class="header-menu-item">
+                    <a href="#" class="link3" class="header-link link">Contacto</a>
+                </li>
             </ul>
         </nav>
 
@@ -98,9 +104,9 @@
 
         <footer class="hero-triton">
             <address>
-                <a href="#" class="logo-blue">WebStudio</a>
-                <p> Calz. Ticomán 500, Ciudad de </p>
-                <p> México, CDMX, México</p>
+                <a href=" /WebStudio" class="logo-blue">WebStudio</a>
+                <p> Calz. Ticomán 500, Ciudad de ,
+                    México, CDMX, México</p>
                 <ul>
                     <li class=""><a class="header-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
