--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
             <ul class="header-menu-list">
                 <li class="header-menu-item 1">
-                    <a href="./index.html" class="link1" class="header-link link current"> Estudio</a>
+                    <a href="./index.html" class="link1"> Estudio</a>
                 </li>
 
                 <li class="header-menu-item 2">
-                    <a href="./portafolio.html" class="link2" class="header-link link">portafolio</a>
+                    <a href="./portafolio.html" class="link2">portafolio</a>
                 </li>
                 <li class="header-menu-item 3">
-                    <a href="#" class="link3" class="header-link link">Contacto</a>
+                    <a href="#" class="link3">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -40,7 +40,7 @@
             <button type="button" class="hero-btn">Solicite nuestro servicio </button>
         </section>
 
-        <section class="politicas" class="diseño-block">
+        <section class="politicas">
             <ul class="politicas-block list">
                 <li class="politicas-list">
                     <h3 class="politicas-title"> ATENCIÓN A LOS DETALLES </h3>
