--- a/portafolio.html
+++ b/portafolio.html
@@ -18,15 +18,14 @@
                 <span class="logo-blue"> WebStudio</span>
             </a>
             <ul class="header-menu-list">
-                <li class="header-menu-item">
-                    <a href="./index.html" class="link2" class="header-link link current"> Estudio</a>
+                <a href="./index.html" class="link2" class="header-link link current"> Estudio</a>
                 </li>
 
                 <li class="header-menu-item">
-                    <a href="./portafolio.html" class="link1" class="header-link link">portafolio</a>
+                    <a href="./portafolio.html" class="link1">portafolio</a>
                 </li>
                 <li class="header-menu-item">
-                    <a href="#" class="link3" class="header-link link">Contacto</a>
+                    <a href="#" class="link3">Contacto</a>
                 </li>
             </ul>
         </nav>
