se realizan cambios

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
             <ul class="header-menu-list">
                 <li class="header-menu-item 1">
-                    <a href="./index.html" class="link1"> Estudio</a>
+                    <a href="./index.html" class="link"> Estudio</a>
                 </li>
 
                 <li class="header-menu-item 2">
-                    <a href="./portafolio.html" class="link2">portafolio</a>
+                    <a href="./portafolio.html" class="link">portafolio</a>
                 </li>
                 <li class="header-menu-item 3">
-                    <a href="#" class="link3">Contacto</a>
+                    <a href="#" class="link">Contacto</a>
                 </li>
             </ul>
         </nav>
